--- a/004.ShowColorCodeByToasTMessage/index.html
+++ b/004.ShowColorCodeByToasTMessage/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Change random RGB background color by a button</title>
+    <title>Copy Color Code and Show a Toast Message</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -15,7 +15,9 @@
             <button id="copyBtn">Copy</button>
         </div>
         <button id="chng_btn">Change Color</button>
-        <div class="toast"><h4 class="hMsg">Toast Message</h4></div>
+        <div class="toast">
+            <h4 class="hMsg">Toast Message</h4>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
